apps/rebourne/less
   Compiling rebourne v0.1.0 (/home/giygas/code/goonix/apps/rebourne)
error[E0277]: a value of type `Vec<String>` cannot be built from an iterator over elements of type `(usize, &str)`
    --> src/resolver.rs:8:61
     |
   8 |     let mut paths = path.to_string().split(":").enumerate().collect();
     |                                                             ^^^^^^^ value of type `Vec<String>` cannot be built from `std::iter::Iterator<Item=(usize, &str)>`
     |
help: the trait `FromIterator<(usize, &str)>` is not implemented for `Vec<String>`
      but trait `FromIterator<String>` is implemented for it
    --> /home/giygas/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/alloc/src/vec/mod.rs:3721:1
     |
3721 | impl<T> FromIterator<T> for Vec<T> {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     = help: for that trait implementation, expected `String`, found `(usize, &str)`
note: the method call chain might not have had the expected associated types
    --> src/resolver.rs:8:49
     |
   8 |     let mut paths = path.to_string().split(":").enumerate().collect();
     |                     ----             ---------- ^^^^^^^^^^^ `Iterator::Item` changed to `(usize, &str)` here
     |                     |                |
     |                     |                `Iterator::Item` is `&str` here
     |                     this expression has type `&str`
note: required by a bound in `collect`
    --> /home/giygas/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core/src/iter/traits/iterator.rs:2015:19
     |
2015 |     fn collect<B: FromIterator<Self::Item>>(self) -> B
     |                   ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Iterator::collect`

warning: unused variable: `util_name`
  --> src/resolver.rs:13:16
   |
13 | pub fn resolve(util_name: &str) {
   |                ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_util_name`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `cmd`
  --> src/interp.rs:20:34
   |
20 |         AstNode::ExternalCommand(cmd,args) => {
   |                                  ^^^ help: if this is intentional, prefix it with an underscore: `_cmd`

warning: unused variable: `args`
  --> src/interp.rs:20:38
   |
20 |         AstNode::ExternalCommand(cmd,args) => {
   |                                      ^^^^ help: if this is intentional, prefix it with an underscore: `_args`

For more information about this error, try `rustc --explain E0277`.
warning: `rebourne` (bin "rebourne") generated 3 warnings
error: could not compile `rebourne` (bin "rebourne") due to 1 previous error; 3 warnings emitted
